Fix chat resizer z-index

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -21,6 +21,7 @@
     right: 0px;
     display: block;
     height: 30vh;
+    z-index: 9;
 }
 
 .GWatch_chatBoxPaper p {
